[CHANGED] Fixed wrong menu interactions when collapsed

--- a/app/client/src/scss/layout/header.scss
+++ b/app/client/src/scss/layout/header.scss
@@ -103,6 +103,7 @@ header{
                 padding: 0;
                 width: 80px;
                 transition: 0.3s ease-in-out;
+                pointer-events: none;
 
                 a{
                     display: block;
@@ -155,6 +156,7 @@ header{
                 }
                 .body--show &{
                     width: 190px;
+                    pointer-events: all;
                     a{
                         &:first-of-type{
                             clip-path: polygon(0 0, 90% 0, 100% 25%, 100% 100%, 0% 100%);
